[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Дмитрий <dimavyatskin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-jose = "^3.3.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.3"
flake8 = "^7.0.0"
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
