[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Дмитрий <dimavyatskin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
python-jose = "^3.3.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.3"
flake8 = "^7.0.0"
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
